k8s/clusters/k3sa/manifests/kube-prometheus-stack/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik 
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.bigd.no`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-stack-prometheus
          port: 9090
          sticky:
            cookie:
              httpOnly: true
              name: kube-prometheus-stack-prometheus
              secure: true
              sameSite: none
  tls:
    secretName: local-bigd-no-tls
